objects/MuleTransactionLog__c.object
<CustomObject>
    <fields>
        <fullName>BatchId__c</fullName>
        <label>BatchId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <label>JobId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Records_Failed__c</fullName>
        <label>No. of Records Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Records_Processed__c</fullName>
        <label>No. of Records Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>MuleTransactionLog</label>
    <nameField>
        <displayFormat>MTx-{00000}</displayFormat>
        <label>MuleTransactionLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MuleTransactionLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BatchId__c</columns>
        <columns>JobId__c</columns>
        <columns>No_of_Records_Failed__c</columns>
        <columns>No_of_Records_Processed__c</columns>
        <columns>State__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>